Rebrand: Change name from AdtechAI to Contact Tsunami throughout the entire codebase - Update all branding, URLs, email addresses, and references - Update Privacy Policy with new company name and contact info - Update package.json, README, and all documentation - Update email templates and sender information - Update all page titles, meta descriptions, and manifest - Maintain all functionality while rebranding

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#0284c7" />
     <meta
       name="description"
-      content="AdtechAI: Autonomous ad agent for marketers. Transform your advertising with intelligent, agentic-first platform that runs your ads for you."
+      content="Contact Tsunami: Autonomous ad agent for marketers. Transform your advertising with intelligent, agentic-first platform that runs your ads for you."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>AdtechAI: The Agent That Runs Your Ads</title>
+    <title>Contact Tsunami: The Agent That Runs Your Ads</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
