--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#0284c7" />
     <meta
       name="description"
-      content="RiptideB2B: Autonomous ad agent for marketers. Transform your advertising with intelligent, agentic-first platform that converts your ads into actual sales."
+      content="RiptideB2B: AI-Powered B2B Software Procurement Platform. Unbiased AI-driven evaluation, procurement agents, and contract benchmarking for efficient B2B software decisions."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>RiptideB2B: The agent that turns your ads into sales</title>
+    <title>RiptideB2B: AI-Powered B2B Software Procurement Platform</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
