Rewrite website copy to be more vague and high-level
- Updated company tagline and description to be more general
- Simplified hero section messaging to focus on outcomes vs processes
- Made testimonials more general without specific metrics
- Updated workflow steps to be high-level rather than detailed
- Generalized feature descriptions and pricing information
- Updated contact form messaging to be more aspirational
- Maintained professional tone while protecting IP details

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#0284c7" />
     <meta
       name="description"
-      content="RiptideB2B: AI-Powered B2B Software Procurement Platform. Unbiased AI-driven evaluation, procurement agents, and contract benchmarking for efficient B2B software decisions."
+      content="RiptideB2B: AI-Powered B2B Software Procurement Platform. Transform your procurement process with intelligent automation and transparent insights for confident decision-making."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
