fix: Update HTML title to ChatB2B branding
- Change browser title from RiptideB2B to ChatB2B Coming Soon
- Update meta description for coming soon messaging
- Keep manifest.json as RiptideB2B (as per user preference)
- Ensure browser tab shows ChatB2B branding

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#0284c7" />
     <meta
       name="description"
-      content="RiptideB2B: AI-Powered B2B Software Procurement Platform. Transform your procurement process with intelligent automation and transparent insights for confident decision-making."
+      content="ChatB2B: Coming Soon - Conversational AI for B2B Software Procurement. Join the waitlist for early access to transform your buying process."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>RiptideB2B: AI-Powered B2B Software Procurement Platform</title>
+    <title>ChatB2B: Coming Soon - Conversational AI for B2B Procurement</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
